margin to last div

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <img src="./assets/images/illustration-create-post.webp" alt="">
     </div>
 
-    <div class="p-11 bg-yellow-500 rounded-2xl mb-5">
-      <p class="font-primary text-left text-black text-2xl font-bold ">Writing your content using AI.</p>
+    <div class="p-11 bg-yellow-500 rounded-2xl">
+      <p class="font-primary text-left text-black text-2xl font-bold mb-5">Writing your content using AI.</p>
       <img src="./assets/images/illustration-ai-content.webp" alt="">
     </div>
 
