worked on the desktop grid version

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Frontend Mentor | Bento grid</title>
 
 </head>
-<body class="bg-slate-200 scroll-smooth">
-  <div class="main-grid p-3 grid gap-4 md:gap-2">
-    <div class="p-14 bg-purple-600 rounded-2xl">
+<body class="bg-slate-100 scroll-smooth">
+  <div class="main-grid p-3 md:p-5 grid md:grid-cols-4 md:grid-row-3 gap-4 md:gap-5">
+    <div class="p-14 bg-purple-600 rounded-2xl md:col-span-2 md:col-start-2">
       <p class="font-primary text-center text-white text-5xl font-bold mb-5 ">Social Media <span class="text-yellow-500">10x</span> <span class="italic">Faster</span> with AI</p>
       <img src="./assets/images/illustration-five-stars.webp" alt="Five Stars">
       <p class="font-primary text-center text-white text-xl mt-3">Over 4,000 5-star reviews </p>
@@ -28,30 +28,30 @@
       <img src="./assets/images/illustration-consistent-schedule.webp" alt="">
     </div>
 
-    <div class="p-11 bg-purple-300 rounded-2xl">
-      <p class="font-primary text-center text-black text-2xl font-bold mb-5">Schedule to social media.</p>
+    <div class="p-11 bg-purple-300 rounded-2xl md:row-span-2 md:row-start-1 md:col-start-4">
+      <p class="font-primary text-center md:text-left text-black text-2xl font-bold mb-5">Schedule to social media.</p>
       <img src="./assets/images/illustration-schedule-posts.webp" alt="">
-      <p class="font-primary text-center text-black text-xl mt-3">Optimize post timings to publish content at the perfect time for your audience.</p>
+      <p class="font-primary text-center md:text-left text-black text-xl mt-3">Optimize post timings to publish content at the perfect time for your audience.</p>
     </div>
 
-    <div class="p-11 bg-purple-600 rounded-2xl">
+    <div class="p-11 bg-purple-600 rounded-2xl md:col-span-2 md:grid md:grid-cols-2 md:col-start-3">
       <img src="./assets/images/illustration-grow-followers.webp" alt="">
-      <p class="font-primary text-center text-white text-4xl font-black mt-6 ">Grow followers with non-stop content.</p>
+      <p class="font-primary text-center text-white text-4xl font-black mt-6 md:text-left ">Grow followers with non-stop content.</p>
     </div>
 
-    <div class="p-11 bg-white rounded-2xl">
+    <div class="p-11 bg-white rounded-2xl md:col-start-2 md:row-start-3">
       <p class="font-primary text-left text-black text-5xl font-bold ">>56%</p>
       <p class="font-primary text-left text-black text-xl mb-6">faster audience growth</p>
       <img src="./assets/images/illustration-audience-growth.webp" alt="">
     </div>
 
-    <div class="p-11 bg-yellow-200 rounded-2xl">
+    <div class="p-11 bg-yellow-200 rounded-2xl md:row-start-1 md:row-end-2">
       <p class="font-primary text-left text-black text-3xl font-bold mb-6">Create and schedule content <span class="text-purple-600 italic">quicker.</span></p>
       <img src="./assets/images/illustration-create-post.webp" alt="">
     </div>
 
-    <div class="p-11 bg-yellow-500 rounded-2xl">
-      <p class="font-primary text-left text-black text-2xl font-bold mb-5">Writing your content using AI.</p>
+    <div class="p-11 bg-yellow-500 rounded-2xl md:row-start-2 md:row-end-4 md:row-span-1">
+      <p class="font-primary text-left text-black text-2xl font-bold mb-5">Write your content using AI.</p>
       <img src="./assets/images/illustration-ai-content.webp" alt="">
     </div>
 
