centralized the stars for a grid

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 </head>
 <body class="bg-slate-100 scroll-smooth">
-  <div class="main-grid p-3 md:p-5 grid md:grid-cols-4 md:grid-row-3 gap-4 md:gap-5">
-    <div class="p-14 bg-purple-600 rounded-2xl md:col-span-2 md:col-start-2">
+  <div class="main-grid p-3 md:p-8 grid md:grid-cols-4 md:grid-row-3 gap-4 md:gap-5">
+    <div class="p-14 md:p-11 bg-purple-600 rounded-2xl md:col-span-2 md:col-start-2">
       <p class="font-primary text-center text-white text-5xl font-bold mb-5 ">Social Media <span class="text-yellow-500">10x</span> <span class="italic">Faster</span> with AI</p>
-      <img src="./assets/images/illustration-five-stars.webp" alt="Five Stars">
+      <img src="./assets/images/illustration-five-stars.webp" class="md:w-auto m-auto" alt="">
       <p class="font-primary text-center text-white text-xl mt-3">Over 4,000 5-star reviews </p>
     </div>
 
